# script-tmp

./: backup-file.sh  chcek-cert.service  checkcert.sh
sm2utl/: CMakeLists.txt  main.c
